# scXMatch_paper

./: .Rhistory  .gitignore  LICENSE  README.md  environment.yml  pertpy_setup.md  pyproject.toml  requirements.txt  results.md
R_src/: bhattacherjee_metadata.csv
data/: FeatureData_CtrlExplant 1Explant 2.csv  FeatureData_CtrlMCSFTGFbetaLPSIFN10YM201636OldOldMCSF.csv
evaluation_results/: job_memory_usage.csv  mcfarland_gt_log.txt  mcfarland_log_gt_new.txt  mcfarland_nx_log.txt  nicolai.csv  norman_gt_log.txt  norman_log_gt_new.txt  norman_nx_log.txt  runtime_gt_log.txt  runtime_memory_log.txt  runtime_memory_log_1000.txt  runtime_memory_log_10000.txt  runtime_memory_log_20.txt  runtime_memory_log_2000.txt  runtime_memory_log_20000.txt  runtime_memory_log_500.txt  runtime_memory_log_5000.txt  runtime_memory_log_50000.txt  runtime_nx_log.txt  schiebinger_gt_log.txt  schiebinger_nx_log.txt  schiebinger_results.txt  sciplex_A549_gt_log.txt  sciplex_A549_nx_log.txt  sciplex_A549_results.txt  sciplex_K562_nx_log.txt  sciplex_MCF7_gt_log.txt  sciplex_MCF7_matching_properties.txt  sciplex_MCF7_matching_properties_10.txt  sciplex_MCF7_matching_properties_100.txt  sciplex_MCF7_matching_properties_1000.txt  sciplex_MCF7_matching_properties_10000.txt  sciplex_MCF7_nx_log.txt  within_mcfarland_results.txt  within_norman_results.txt  within_schiebinger_results.txt  within_sciplex_A549_results.txt  within_sciplex_K562_results.txt  within_sciplex_MCF7_results.txt
nlof_jobs/: A549.o499025  K562.o499024  MCF7.o499027  MCF7.o501485  MCF7.o501891  job.sh
notebooks/: MI.csv  SSNR.csv  (+45 more)
(+1059 files in other folders)
