[project]
dependencies = []
name = "scxmatch"
requires-python = "==3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["rapidsai", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
scxmatch = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
graph-tool = ">=2.92,<3"

[tool.pixi.feature.gpu.dependencies]
rmm = { version = "==24.10", channel = "rapidsai" }
pylibraft = { version = "==24.10", channel = "rapidsai" }
cupy = { version = ">=13.4.0,<14", channel = "conda-forge" }

[tool.pixi.environments]
gpu = ["gpu"]
